@@ -1,30 +1,30 @@
 *** ppl_lpsol -v --min -oobtained afiro.mps
 Constraints:
 X01 - X02 - X03 = 0
-2386907802506363*X01 - X04 = 0
+2386907802506363*X01 - 2251799813685248*X04 = 0
 -X01 >= -80
-X02 - 3152519739159347*X14 >= 0
+2251799813685248*X02 - 3152519739159347*X14 >= 0
 X06 + X07 + X08 + X09 - X14 - X15 = 0
-2386907802506363*X06 + 2386907802506363*X07 + 1080863910568919*X08 + 7746191359077253*X09 - X16 = 0
+9547631210025452*X06 + 9547631210025452*X07 + 8646911284551352*X08 + 7746191359077253*X09 - 9007199254740992*X16 = 0
 -X06 + X10 >= -80
 -X07 + X11 >= 0
 -X08 + X12 >= 0
 -X09 + X13 >= 0
 X22 - X23 - X24 - X25 = 0
-7746191359077253*X22 - X26 = 0
+7746191359077253*X22 - 18014398509481984*X26 = 0
 -X22 >= -500
-X23 - 3152519739159347*X36 >= 0
-7746191359077253*X28 + 7746191359077253*X29 + 3512807709348987*X30 + 3332663724254167*X31 - X38 = 0
+2251799813685248*X23 - 3152519739159347*X36 >= 0
+7746191359077253*X28 + 7746191359077253*X29 + 7025615418697974*X30 + 6665327448508334*X31 - 18014398509481984*X38 = 0
 X28 + X29 + X30 + X31 - X36 + X37 + X39 = 44
 -X28 + X32 >= -500
 -X29 + X33 >= 0
 -X30 + X34 >= 0
 -X31 + X35 >= 0
--2661627379775963*X10 - 2686397177726501*X11 - 5422333951354077*X12 - 5469621747441467*X13 + X25 - 2466846695892189*X32 - 4996743786567565*X33 - 5064297780978123*X34 - 641481471923585*X35 >= 0
-X03 - 7854277750134145*X22 >= 0
-X15 - 7854277750134145*X28 - 7782220156096217*X29 - 7782220156096217*X30 - 7710162562058289*X31 >= 0
--5422333951354077*X01 + X24 >= 0
--5422333951354077*X06 - 5638506733467861*X07 - 5638506733467861*X08 - 5872693914091127*X09 + X37 >= 0
+-5323254759551926*X10 - 5372794355453002*X11 - 5422333951354077*X12 - 5469621747441467*X13 + 2251799813685248*X25 - 4933693391784378*X32 - 4996743786567565*X33 - 5064297780978123*X34 - 5131851775388680*X35 >= 0
+72057594037927936*X03 - 7854277750134145*X22 >= 0
+72057594037927936*X15 - 7854277750134145*X28 - 7782220156096217*X29 - 7782220156096217*X30 - 7710162562058289*X31 >= 0
+-5422333951354077*X01 + 18014398509481984*X24 >= 0
+-5422333951354077*X06 - 5638506733467861*X07 - 5638506733467861*X08 - 5872693914091127*X09 + 18014398509481984*X37 >= 0
 -X04 - X26 >= -310
 -X16 - X38 >= -300
 X01 >= 0
@@ -60,16 +60,16 @@ X37 >= 0
 X38 >= 0
 X39 >= 0
 Objective function:
--64903710731685348959510906011648*X02 - 103845937170696554732337747722240*X14 - 97355566097528014432067104276480*X23 - 19471113219505602886413420855296*X36 + 180143985094819840*X39)/18014398509481984
+-7205759403792794*X02 - 5764607523034235*X14 - 10808639105689190*X23 - 8646911284551352*X36 + 180143985094819840*X39)/18014398509481984
 Minimizing.
 Optimum value:
-0
+-464.753
 Optimum location:
-X01 = 0
-X02 = 0
-X03 = 0
-X04 = 0
-X06 = 8.11459e-15
+X01 = 80
+X02 = 25.5
+X03 = 54.5
+X04 = 84.8
+X06 = 18.2143
 X07 = 0
 X08 = 0
 X09 = 0
@@ -77,15 +77,15 @@ X10 = 0
 X11 = 0
 X12 = 0
 X13 = 0
-X14 = 0
-X15 = 8.11459e-15
-X16 = 19.3688
-X22 = 0
-X23 = 0
-X24 = 0
+X14 = 18.2143
+X15 = 0
+X16 = 19.3071
+X22 = 500
+X23 = 475.92
+X24 = 24.08
 X25 = 0
-X26 = 0
-X28 = 1.03314e-30
+X26 = 215
+X28 = 0
 X29 = 0
 X30 = 0
 X31 = 0
@@ -93,37 +93,37 @@ X32 = 0
 X33 = 0
 X34 = 0
 X35 = 0
-X36 = 0
-X37 = 44
-X38 = 8.00292e-15
+X36 = 339.943
+X37 = 383.943
+X38 = 0
 X39 = 0
 *** ppl_lpsol -v --max -oobtained afiro.mps
 Constraints:
 X01 - X02 - X03 = 0
-2386907802506363*X01 - X04 = 0
+2386907802506363*X01 - 2251799813685248*X04 = 0
 -X01 >= -80
-X02 - 3152519739159347*X14 >= 0
+2251799813685248*X02 - 3152519739159347*X14 >= 0
 X06 + X07 + X08 + X09 - X14 - X15 = 0
-2386907802506363*X06 + 2386907802506363*X07 + 1080863910568919*X08 + 7746191359077253*X09 - X16 = 0
+9547631210025452*X06 + 9547631210025452*X07 + 8646911284551352*X08 + 7746191359077253*X09 - 9007199254740992*X16 = 0
 -X06 + X10 >= -80
 -X07 + X11 >= 0
 -X08 + X12 >= 0
 -X09 + X13 >= 0
 X22 - X23 - X24 - X25 = 0
-7746191359077253*X22 - X26 = 0
+7746191359077253*X22 - 18014398509481984*X26 = 0
 -X22 >= -500
-X23 - 3152519739159347*X36 >= 0
-7746191359077253*X28 + 7746191359077253*X29 + 3512807709348987*X30 + 3332663724254167*X31 - X38 = 0
+2251799813685248*X23 - 3152519739159347*X36 >= 0
+7746191359077253*X28 + 7746191359077253*X29 + 7025615418697974*X30 + 6665327448508334*X31 - 18014398509481984*X38 = 0
 X28 + X29 + X30 + X31 - X36 + X37 + X39 = 44
 -X28 + X32 >= -500
 -X29 + X33 >= 0
 -X30 + X34 >= 0
 -X31 + X35 >= 0
--2661627379775963*X10 - 2686397177726501*X11 - 5422333951354077*X12 - 5469621747441467*X13 + X25 - 2466846695892189*X32 - 4996743786567565*X33 - 5064297780978123*X34 - 641481471923585*X35 >= 0
-X03 - 7854277750134145*X22 >= 0
-X15 - 7854277750134145*X28 - 7782220156096217*X29 - 7782220156096217*X30 - 7710162562058289*X31 >= 0
--5422333951354077*X01 + X24 >= 0
--5422333951354077*X06 - 5638506733467861*X07 - 5638506733467861*X08 - 5872693914091127*X09 + X37 >= 0
+-5323254759551926*X10 - 5372794355453002*X11 - 5422333951354077*X12 - 5469621747441467*X13 + 2251799813685248*X25 - 4933693391784378*X32 - 4996743786567565*X33 - 5064297780978123*X34 - 5131851775388680*X35 >= 0
+72057594037927936*X03 - 7854277750134145*X22 >= 0
+72057594037927936*X15 - 7854277750134145*X28 - 7782220156096217*X29 - 7782220156096217*X30 - 7710162562058289*X31 >= 0
+-5422333951354077*X01 + 18014398509481984*X24 >= 0
+-5422333951354077*X06 - 5638506733467861*X07 - 5638506733467861*X08 - 5872693914091127*X09 + 18014398509481984*X37 >= 0
 -X04 - X26 >= -310
 -X16 - X38 >= -300
 X01 >= 0
@@ -159,15 +159,15 @@ X37 >= 0
 X38 >= 0
 X39 >= 0
 Objective function:
--64903710731685348959510906011648*X02 - 103845937170696554732337747722240*X14 - 97355566097528014432067104276480*X23 - 19471113219505602886413420855296*X36 + 180143985094819840*X39)/18014398509481984
+-7205759403792794*X02 - 5764607523034235*X14 - 10808639105689190*X23 - 8646911284551352*X36 + 180143985094819840*X39)/18014398509481984
 Maximizing.
 Optimum value:
-440
+3438.29
 Optimum location:
-X01 = 0
+X01 = 54.5
 X02 = 0
-X03 = 0
-X04 = 0
+X03 = 54.5
+X04 = 57.77
 X06 = 0
 X07 = 0
 X08 = 0
@@ -179,11 +179,11 @@ X13 = 0
 X14 = 0
 X15 = 0
 X16 = 0
-X22 = 0
-X23 = 0
-X24 = 0
+X22 = 500
+X23 = 483.596
+X24 = 16.4045
 X25 = 0
-X26 = 0
+X26 = 215
 X28 = 0
 X29 = 0
 X30 = 0
@@ -192,10 +192,10 @@ X32 = 0
 X33 = 0
 X34 = 0
 X35 = 0
-X36 = 0
+X36 = 345.425
 X37 = 0
 X38 = 0
-X39 = 44
+X39 = 389.425
 *** ppl_lpsol -v --min -oobtained bgprtr.mps
 Constraints:
 P1T1 + P2T1 - NDT1 = 130
