@@ -345,6 +345,7 @@ add_constraints(ppl_LinExpression_t ppl_le,
 
   case LPX_LO:
     mpz_mul(tmp_z, den_lcm, mpq_numref(rational_lb));
+    mpz_divexact(tmp_z, tmp_z, mpq_denref(rational_lb));
     mpz_neg(tmp_z, tmp_z);
     ppl_assign_Coefficient_from_mpz_t(ppl_coeff, tmp_z);
     ppl_LinExpression_add_to_inhomogeneous(ppl_le, ppl_coeff);
@@ -360,6 +361,7 @@ add_constraints(ppl_LinExpression_t ppl_le,
 
   case LPX_UP:
     mpz_mul(tmp_z, den_lcm, mpq_numref(rational_ub));
+    mpz_divexact(tmp_z, tmp_z, mpq_denref(rational_ub));
     mpz_neg(tmp_z, tmp_z);
     ppl_assign_Coefficient_from_mpz_t(ppl_coeff, tmp_z);
     ppl_LinExpression_add_to_inhomogeneous(ppl_le, ppl_coeff);
@@ -377,6 +379,7 @@ add_constraints(ppl_LinExpression_t ppl_le,
     ppl_new_LinExpression_from_LinExpression(&ppl_le2, ppl_le);
 
     mpz_mul(tmp_z, den_lcm, mpq_numref(rational_lb));
+    mpz_divexact(tmp_z, tmp_z, mpq_denref(rational_lb));
     mpz_neg(tmp_z, tmp_z);
     ppl_assign_Coefficient_from_mpz_t(ppl_coeff, tmp_z);
     ppl_LinExpression_add_to_inhomogeneous(ppl_le, ppl_coeff);
@@ -390,6 +393,7 @@ add_constraints(ppl_LinExpression_t ppl_le,
     ppl_delete_Constraint(ppl_c);
 
     mpz_mul(tmp_z, den_lcm, mpq_numref(rational_ub));
+    mpz_divexact(tmp_z, tmp_z, mpq_denref(rational_ub));
     mpz_neg(tmp_z, tmp_z);
     ppl_assign_Coefficient_from_mpz_t(ppl_coeff, tmp_z);
     ppl_LinExpression_add_to_inhomogeneous(ppl_le2, ppl_coeff);
@@ -406,6 +410,7 @@ add_constraints(ppl_LinExpression_t ppl_le,
 
   case LPX_FX:
     mpz_mul(tmp_z, den_lcm, mpq_numref(rational_lb));
+    mpz_divexact(tmp_z, tmp_z, mpq_denref(rational_lb));
     mpz_neg(tmp_z, tmp_z);
     ppl_assign_Coefficient_from_mpz_t(ppl_coeff, tmp_z);
     ppl_LinExpression_add_to_inhomogeneous(ppl_le, ppl_coeff);
@@ -503,6 +508,7 @@ solve(char* file_name) {
 
     for (i = 1; i <= nz; ++i) {
       mpz_mul(tmp_z, den_lcm, mpq_numref(rational_coefficient[i]));
+      mpz_divexact(tmp_z, tmp_z, mpq_denref(rational_coefficient[i]));
       ppl_assign_Coefficient_from_mpz_t(ppl_coeff, tmp_z);
       ppl_LinExpression_add_to_coefficient(ppl_le, coefficient_index[i]-1,
 					   ppl_coeff);
@@ -595,6 +601,7 @@ solve(char* file_name) {
   /* The inhomogeneous term is completely useless for our purpose. */
   for (i = 1; i <= dimension; ++i) {
     mpz_mul(tmp_z, den_lcm, mpq_numref(objective[i]));
+    mpz_divexact(tmp_z, tmp_z, mpq_denref(objective[i]));
     ppl_assign_Coefficient_from_mpz_t(ppl_coeff, tmp_z);
     ppl_LinExpression_add_to_coefficient(ppl_objective_le, i-1, ppl_coeff);
   }
